--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -9,7 +9,9 @@
     --text-gray: #a0a0a0;
     --header-gray: #4b4b4b;
     --panel-body-background-gray: #313131;
+    --viewer-header-background-gray: #313131;
     --page-background-gray: #313131;
+    --layout-borders: var(--dimgray);
     --light-gray: #aeacae;
     --off-white: #f8f8f8;
     --border-gray: var(--dimgray);
